Reformat index.html

--- a/index.html
+++ b/index.html
@@ -6,33 +6,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dream Developments Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="header">
-        <div class="title">Dream Developments</div>
+    <div class="hero">
 
-        <div class="nav-bar">
-            <ul>
-                <li>Booking</li>
-                <li>Career</li>
-                <li>About us</li>
-            </ul>
+        <div class="hero-left">
+            <div class="title">Dream Developments</div>
+
+            <div class="introduction-block">
+                <div class="catch-phrase">You dream it, we build it!</div>
+                <div class="introduction">
+                    Dream Developments is a performance and tuning shop for car enthusiasts who dare to dream big.
+                    From hedonistic head-turners to unassuming sleepers we got you covered.
+                    Don't worry if you are new to the car scene, it can be overwhelming at first. Sign up and book a
+                    free
+                    consultation with one of our specialist to know the capabilities of your car and establish your
+                    goals.
+                </div>
+                <button>
+                    Sign up
+                </button>
+            </div>
         </div>
-        <div class="catch-phrase">You dream it, we build it!</div>
-        <div class="introduction">
-            Dream Developments is a performance and tuning shop for car enthusiasts who dare to dream big.
-            From hedonistic head-turners to unassuming sleepers we got you covered.
-            Don't worry if you are new to the car scene, it can be overwhelming at first. Sign up and book a free consultation with one of our specialist to know the capabilities of your car and establish your goals.
+
+        <div class="hero-right">
+            <div class="nav-bar">
+                <ul>
+                    <li><a href="index.html">Booking</a></li>
+                    <li><a href="index.html">Career</a></li>
+                    <li><a href="index.html">About us</a></li>
+                </ul>
+            </div>
+            <div class="picture-frame">
+                <img>
+            </div>
         </div>
-        <button>
-            Sign up
-        </button>
-        <div class="picture-frame">
-            <img>
-        </div>
-        <div class="showcase-employess">
-            <p>Meet the Dream Team</p>
+    </div>
+
+    <div class="showcase-employees">
+        <p class="employee-title">Meet the Dream Team</p>
+        <div class="employee-table">
             <div class="employee">
                 <img>
                 <p>Import/JDM Specialist</p>
@@ -50,20 +65,22 @@
                 <p>ECU Specialist</p>
             </div>
         </div>
-        <div class="quote">
-            <p><em>Life is too short to drive boring cars.</em></p>
-            <p>-Every Car Enthusiast</p>
-        </div>
-        
-        <div class="banner">
+    </div>
+    <div class="quote">
+        <p class="quote-text"><em>Life is too short to drive boring cars.</em></p>
+        <p class="author">-Every Car Enthusiast</p>
+    </div>
+
+    <div class="banner">
+        <div class="banner-content">
             <p>Let our work speak for itself!</p>
             <p>Check out the reviews of our customers and pictures of their builds.</p>
             <button>Reviews</button>
         </div>
-        
-        <div class="footer">
-            <p>Copyright © Dream Developments 2023</p>
-        </div>
+    </div>
+
+    <div class="footer">
+        <p>Copyright © Dream Developments 2023</p>
     </div>
 </body>
 
