Add employees section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     consultation with one of our specialist to know the capabilities of your car and establish your
                     goals.
                 </div>
-                <button>
+                <button class="introduction-button">
                     Sign up
                 </button>
             </div>
@@ -40,48 +40,56 @@
                 </ul>
             </div>
             <div class="picture-frame">
-                <img>
+                <div class="box">
+                    <img src="./images/intro-import.jpg">
+                </div>
+                <div class="box">
+                    <img src="./images/intro-euro.jpg">
+                </div>
+                <div class="box">
+                    <img src="./images/intro-domestic.jpg">"
+                </div>
             </div>
         </div>
     </div>
-
     <div class="showcase-employees">
         <p class="employee-title">Meet the Dream Team</p>
         <div class="employee-table">
             <div class="employee">
-                <img>
+                <img src="./images/import-specialist.jpg">
                 <p>Import/JDM Specialist</p>
             </div>
             <div class="employee">
-                <img>
+                <img src="./images/euro-specialist.jpg">
                 <p>Euro Specialist </p>
             </div>
             <div class="employee">
-                <img>
+                <img src="./images/american-specialist.jpg">
                 <p>American/Domestic Specialist</p>
             </div>
             <div class="employee">
-                <img>
+                <img src="./images/ecu-specialist.jpg">
                 <p>ECU Specialist</p>
             </div>
         </div>
     </div>
-    <div class="quote">
-        <p class="quote-text"><em>Life is too short to drive boring cars.</em></p>
-        <p class="author">-Every Car Enthusiast</p>
-    </div>
 
-    <div class="banner">
-        <div class="banner-content">
-            <p>Let our work speak for itself!</p>
-            <p>Check out the reviews of our customers and pictures of their builds.</p>
-            <button>Reviews</button>
+        <div class="quote">
+            <p class="quote-text"><em>Life is too short to drive boring cars.</em></p>
+            <p class="author">-Every Car Enthusiast</p>
         </div>
-    </div>
 
-    <div class="footer">
-        <p>Copyright © Dream Developments 2023</p>
-    </div>
+        <div class="banner">
+            <div class="banner-content">
+                <p>Let our work speak for itself!</p>
+                <p>Check out the reviews of our customers and pictures of their builds.</p>
+                <button>Reviews</button>
+            </div>
+        </div>
+
+        <div class="footer">
+            <p>Copyright © Dream Developments 2023</p>
+        </div>
 </body>
 
 </html>
