--- a/index.html
+++ b/index.html
@@ -74,22 +74,26 @@
         </div>
     </div>
 
-        <div class="quote">
-            <p class="quote-text"><em>Life is too short to drive boring cars.</em></p>
-            <p class="author">-Every Car Enthusiast</p>
-        </div>
+    <div class="quote">
+        <p class="quote-text"><em>Life is too short to drive boring cars.</em></p>
+        <p class="author">-Every Car Enthusiast</p>
+    </div>
 
-        <div class="banner">
-            <div class="banner-content">
-                <p>Let our work speak for itself!</p>
+    <div class="banner">
+        <div class="banner-content">
+            <div class="banner-left">
+                <p class="banner-title">Let our work speak for itself!</p>
                 <p>Check out the reviews of our customers and pictures of their builds.</p>
-                <button>Reviews</button>
+            </div>
+            <div class="banner-right">
+                <button class="banner-button">Reviews</button>
             </div>
         </div>
+    </div>
 
-        <div class="footer">
-            <p>Copyright © Dream Developments 2023</p>
-        </div>
+    <div class="footer">
+        <p>Copyright © Dream Developments 2023</p>
+    </div>
 </body>
 
 </html>
