Add styling to buttons,links,images,titles,fonts

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="hero">
 
         <div class="hero-left">
-            <div class="title">Dream Developments</div>
+            <div class="title magnify"><a>Dream Developments</a></div>
 
             <div class="introduction-block">
-                <div class="catch-phrase">You dream it, we build it!</div>
+                <div class="catch-phrase underline"><a>You dream it, we build it!</a></div>
                 <div class="introduction">
                     Dream Developments is a performance and tuning shop for car enthusiasts who dare to dream big.
                     From hedonistic head-turners to unassuming sleepers we got you covered.
@@ -25,7 +25,7 @@
                     consultation with one of our specialist to know the capabilities of your car and establish your
                     goals.
                 </div>
-                <button class="introduction-button">
+                <button class="introduction-button squishy-button">
                     Sign up
                 </button>
             </div>
@@ -33,27 +33,27 @@
 
         <div class="hero-right">
             <div class="nav-bar">
-                <ul>
+                <ul class="pulse">
                     <li><a href="index.html">Booking</a></li>
                     <li><a href="index.html">Career</a></li>
                     <li><a href="index.html">About us</a></li>
                 </ul>
             </div>
             <div class="picture-frame">
-                <div class="box">
+                <div class="image-box">
                     <img src="./images/intro-import.jpg">
                 </div>
-                <div class="box">
+                <div class="image-box">
                     <img src="./images/intro-euro.jpg">
                 </div>
-                <div class="box">
+                <div class="image-box">
                     <img src="./images/intro-domestic.jpg">"
                 </div>
             </div>
         </div>
     </div>
     <div class="showcase-employees">
-        <p class="employee-title">Meet the Dream Team</p>
+        <div class="employee-title magnify"><a>Meet the Dream Team</a></div>
         <div class="employee-table">
             <div class="employee">
                 <img src="./images/import-specialist.jpg">
@@ -86,7 +86,7 @@
                 <p>Check out the reviews of our customers and pictures of their builds.</p>
             </div>
             <div class="banner-right">
-                <button class="banner-button">Reviews</button>
+                <button class="banner-button squishy-button">Reviews</button>
             </div>
         </div>
     </div>
