Add employee grid animations and minor fixes

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class="hero-right">
             <div class="nav-bar">
                 <ul class="pulse">
-                    <li><a href="index.html">Booking</a></li>
-                    <li><a href="index.html">Career</a></li>
-                    <li><a href="index.html">About us</a></li>
+                    <li><a href="#">Booking</a></li>
+                    <li><a href="#">Career</a></li>
+                    <li><a href="#">About us</a></li>
                 </ul>
             </div>
             <div class="picture-frame">
@@ -56,21 +56,21 @@
     <div class="showcase-employees">
         <div class="employee-title magnify"><a>Meet the Dream Team</a></div>
         <div class="employee-table">
-            <div class="employee">
+            <div class="employee highlight">
                 <img src="./images/import-specialist.jpg">
-                <p>Import/JDM Specialist</p>
+                <a>Import/JDM Specialist</a>
             </div>
-            <div class="employee">
+            <div class="employee highlight">
                 <img src="./images/euro-specialist.jpg">
-                <p>Euro Specialist </p>
+                <a>Euro Specialist </a>
             </div>
-            <div class="employee">
+            <div class="employee highlight">
                 <img src="./images/american-specialist.jpg">
-                <p>American/Domestic Specialist</p>
+                <a>American/Domestic Specialist</a>
             </div>
-            <div class="employee">
+            <div class="employee highlight">
                 <img src="./images/ecu-specialist.jpg">
-                <p>ECU Specialist</p>
+                <a>ECU Specialist</a>
             </div>
         </div>
     </div>
