Add alt text to all images

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             </div>
             <div class="picture-frame">
                 <div class="image-box">
-                    <img src="./images/intro-import.jpg">
+                    <img src="./images/intro-import.jpg" alt="Modified gray mitsubishi lancer evolution with carbon fiber hood and splitter">
                 </div>
                 <div class="image-box">
-                    <img src="./images/intro-euro.jpg">
+                    <img src="./images/intro-euro.jpg" alt="Modified gray BMW E30 3 series with sun roof">
                 </div>
                 <div class="image-box">
-                    <img src="./images/intro-domestic.jpg">"
+                    <img src="./images/intro-domestic.jpg" alt="Modified Dodge Challenger with red angel-eye headlights">"
                 </div>
             </div>
         </div>
@@ -57,15 +57,15 @@
         <div class="employee-title magnify"><a>Meet the Dream Team</a></div>
         <div class="employee-table">
             <div class="employee highlight">
-                <img src="./images/import-specialist.jpg">
+                <img src="./images/import-specialist.jpg" alt="Asian male car mechanic working on a Nissan">
                 <a>Import/JDM Specialist</a>
             </div>
             <div class="employee highlight">
-                <img src="./images/euro-specialist.jpg">
+                <img src="./images/euro-specialist.jpg" alt="Female car mechanic in Castrol uniform">
                 <a>Euro Specialist </a>
             </div>
             <div class="employee highlight">
-                <img src="./images/american-specialist.jpg">
+                <img src="./images/american-specialist.jpg" alt="American car mechanic with beard and mustache in an overall holding a wrench in his hand">
                 <a>American/Domestic Specialist</a>
             </div>
             <div class="employee highlight">
