Modify the description and alt text of the ECU Specialist

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 <a>American/Domestic Specialist</a>
             </div>
             <div class="employee highlight">
-                <img src="./images/ecu-specialist.jpg">
-                <a>ECU Specialist</a>
+                <img src="./images/ecu-specialist.jpg" alt="ECU Tune Specialist programming a Nissan GT-R">
+                <a>ECU Tune Specialist</a>
             </div>
         </div>
     </div>
